Improved import statement, added plotly output

--- a/scheduled-report.ipynb
+++ b/scheduled-report.ipynb
@@ -40,20 +40,22 @@
   {
    "cell_type": "code",
    "source": [
-    "from influxdb_client_3 import InfluxDBClient3\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.backends.backend_pdf import PdfPages\n",
-    "from datetime import datetime, timedelta\n",
-    "from tabulate import tabulate\n",
-    "from zoneinfo import ZoneInfo\n",
     "import os\n",
+    "from datetime import datetime, timedelta\n",
+    "from zoneinfo import ZoneInfo\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from matplotlib.backends.backend_pdf import PdfPages\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "from influxdb_client_3 import InfluxDBClient3\n",
     "\n",
     "# Connect to InfluxDB 3\n",
     "client = InfluxDBClient3(\n",
     "    host=os.getenv(\"INFLUX_SERVER\"),\n",
     "    token=os.getenv(\"INFLUX_TOKEN\"),\n",
-    "    database=\"WFR25\"\n",
+    "    database=\"WFR25\",\n",
     ")"
    ],
    "metadata": {
