--- a/power-plots-2d-3d.ipynb
+++ b/power-plots-2d-3d.ipynb
@@ -37,17 +37,22 @@
   {
    "cell_type": "code",
    "source": [
-    "from influxdb_client_3 import InfluxDBClient3\n",
-    "import pyarrow as pa\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import os\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.io as pio\n",
+    "from influxdb_client_3 import InfluxDBClient3\n",
+    "\n",
+    "pio.templates.default = \"plotly_white\"\n",
     "\n",
     "# Connect to InfluxDB 3\n",
     "client = InfluxDBClient3(\n",
     "    host=os.getenv(\"INFLUX_SERVER\"),\n",
     "    token=os.getenv(\"INFLUX_TOKEN\"),\n",
-    "    database=\"WFR25\"\n",
+    "    database=\"WFR25\",\n",
     ")"
    ],
    "metadata": {
@@ -63,12 +68,12 @@
      }
     },
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:28.357805Z",
-     "start_time": "2025-11-09T21:30:28.355507Z"
+     "end_time": "2025-11-09T21:58:56.797935Z",
+     "start_time": "2025-11-09T21:58:56.098241Z"
     }
    },
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -99,8 +104,8 @@
     },
     "outputId": "0ec67950-1eb2-42c1-c5d5-b211dcebc0d1",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:28.416252Z",
-     "start_time": "2025-11-09T21:30:28.359556Z"
+     "end_time": "2025-11-09T21:58:56.855849Z",
+     "start_time": "2025-11-09T21:58:56.802488Z"
     }
    },
    "outputs": [
@@ -116,7 +121,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -149,8 +154,8 @@
     },
     "outputId": "af5d99ef-3b1e-48dc-ef1f-3db79dc57da4",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:28.436096Z",
-     "start_time": "2025-11-09T21:30:28.417580Z"
+     "end_time": "2025-11-09T21:58:56.884014Z",
+     "start_time": "2025-11-09T21:58:56.863466Z"
     }
    },
    "outputs": [
@@ -166,7 +171,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -200,8 +205,8 @@
     },
     "outputId": "7eaa4d22-69c7-4aaf-f6a3-2fc5c17de957",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:29.280217Z",
-     "start_time": "2025-11-09T21:30:28.437338Z"
+     "end_time": "2025-11-09T21:58:57.765843Z",
+     "start_time": "2025-11-09T21:58:56.919243Z"
     }
    },
    "outputs": [
@@ -241,7 +246,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -274,8 +279,8 @@
     },
     "outputId": "4efe2443-034c-4812-ae16-10cc0392040c",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:29.480039Z",
-     "start_time": "2025-11-09T21:30:29.281859Z"
+     "end_time": "2025-11-09T21:58:57.953145Z",
+     "start_time": "2025-11-09T21:58:57.839514Z"
     }
    },
    "outputs": [
@@ -295,7 +300,7 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -355,8 +360,8 @@
     },
     "outputId": "f3adf0e8-7858-4fbc-e721-7532c23ecb4a",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:31.921126Z",
-     "start_time": "2025-11-09T21:30:29.556627Z"
+     "end_time": "2025-11-09T21:59:00.788920Z",
+     "start_time": "2025-11-09T21:58:57.963721Z"
     }
    },
    "outputs": [
@@ -371,7 +376,7 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -403,8 +408,8 @@
     },
     "outputId": "d0a89003-abe5-4df4-f59f-ec43e22ca83b",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:36.649937Z",
-     "start_time": "2025-11-09T21:30:31.922556Z"
+     "end_time": "2025-11-09T21:59:05.162216Z",
+     "start_time": "2025-11-09T21:59:00.839831Z"
     }
    },
    "outputs": [
@@ -420,7 +425,7 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -460,8 +465,8 @@
     },
     "outputId": "8c2ac802-fcc7-4f43-c4a6-51f7dba3864d",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:44.046336Z",
-     "start_time": "2025-11-09T21:30:36.767303Z"
+     "end_time": "2025-11-09T21:59:12.519901Z",
+     "start_time": "2025-11-09T21:59:05.219910Z"
     }
    },
    "outputs": [
@@ -478,7 +483,7 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -520,8 +525,8 @@
     },
     "outputId": "82dd6b21-fe81-40f1-e7ec-aeaa4d47e58c",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:30:51.571204Z",
-     "start_time": "2025-11-09T21:30:44.047613Z"
+     "end_time": "2025-11-09T21:59:19.994180Z",
+     "start_time": "2025-11-09T21:59:12.579934Z"
     }
    },
    "outputs": [
@@ -539,7 +544,7 @@
      }
     }
    ],
-   "execution_count": 27
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -575,12 +580,12 @@
    "metadata": {
     "id": "tQ4PhvDSueXp",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:31:07.818336Z",
-     "start_time": "2025-11-09T21:30:51.680895Z"
+     "end_time": "2025-11-09T21:59:36.427976Z",
+     "start_time": "2025-11-09T21:59:20.069864Z"
     }
    },
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -663,8 +668,8 @@
     },
     "outputId": "0a63b7af-c91a-4b9d-e348-6582e7909806",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:31:08.910734Z",
-     "start_time": "2025-11-09T21:31:07.820420Z"
+     "end_time": "2025-11-09T21:59:37.565925Z",
+     "start_time": "2025-11-09T21:59:36.475927Z"
     }
    },
    "outputs": [
@@ -683,7 +688,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -726,8 +731,8 @@
     },
     "outputId": "5c074d83-3dce-4092-f060-a14619446bd0",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:31:09.064442Z",
-     "start_time": "2025-11-09T21:31:08.976593Z"
+     "end_time": "2025-11-09T21:59:37.709356Z",
+     "start_time": "2025-11-09T21:59:37.615523Z"
     }
    },
    "outputs": [
@@ -762,7 +767,7 @@
      }
     }
    ],
-   "execution_count": 30
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -778,10 +783,6 @@
   {
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import plotly.graph_objects as go\n",
-    "\n",
     "# Pick data window\n",
     "if 'period_df' in globals() and isinstance(period_df, pd.DataFrame) and len(period_df) > 0:\n",
     "    plot_df = period_df.copy()\n",
@@ -869,6 +870,9 @@
     ")\n",
     "\n",
     "fig.update_scenes(camera=dict(eye=dict(x=1.6, y=1.6, z=1.2)))\n",
+    "\n",
+    "# Save fig to output\n",
+    "fig.write_html(\"output/3d-voltage-current-time.html\")\n",
     "fig.show()"
    ],
    "metadata": {
@@ -889,8 +893,8 @@
     },
     "outputId": "67c4afd5-2f9a-4d2a-c0a4-9e0923b965d4",
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:31:09.084202Z",
-     "start_time": "2025-11-09T21:31:09.065642Z"
+     "end_time": "2025-11-09T21:59:38.633609Z",
+     "start_time": "2025-11-09T21:59:37.724897Z"
     }
    },
    "outputs": [
@@ -2692,10 +2696,10 @@
           ],
           "scatter": [
            {
-            "marker": {
-             "line": {
-              "color": "#283442"
-             }
+            "fillpattern": {
+             "fillmode": "overlay",
+             "size": 10,
+             "solidity": 0.2
             },
             "type": "scatter"
            }
@@ -2725,14 +2729,14 @@
           "bar": [
            {
             "error_x": {
-             "color": "#f2f5fa"
+             "color": "#2a3f5f"
             },
             "error_y": {
-             "color": "#f2f5fa"
+             "color": "#2a3f5f"
             },
             "marker": {
              "line": {
-              "color": "rgb(17,17,17)",
+              "color": "white",
               "width": 0.5
              },
              "pattern": {
@@ -2780,12 +2784,13 @@
           ],
           "scattergl": [
            {
+            "type": "scattergl",
             "marker": {
-             "line": {
-              "color": "#283442"
+             "colorbar": {
+              "outlinewidth": 0,
+              "ticks": ""
              }
-            },
-            "type": "scattergl"
+            }
            }
           ],
           "scatter3d": [
@@ -2852,18 +2857,18 @@
           "carpet": [
            {
             "aaxis": {
-             "endlinecolor": "#A2B1C6",
-             "gridcolor": "#506784",
-             "linecolor": "#506784",
-             "minorgridcolor": "#506784",
-             "startlinecolor": "#A2B1C6"
+             "endlinecolor": "#2a3f5f",
+             "gridcolor": "#C8D4E3",
+             "linecolor": "#C8D4E3",
+             "minorgridcolor": "#C8D4E3",
+             "startlinecolor": "#2a3f5f"
             },
             "baxis": {
-             "endlinecolor": "#A2B1C6",
-             "gridcolor": "#506784",
-             "linecolor": "#506784",
-             "minorgridcolor": "#506784",
-             "startlinecolor": "#A2B1C6"
+             "endlinecolor": "#2a3f5f",
+             "gridcolor": "#C8D4E3",
+             "linecolor": "#C8D4E3",
+             "minorgridcolor": "#C8D4E3",
+             "startlinecolor": "#2a3f5f"
             },
             "type": "carpet"
            }
@@ -2872,18 +2877,18 @@
            {
             "cells": {
              "fill": {
-              "color": "#506784"
+              "color": "#EBF0F8"
              },
              "line": {
-              "color": "rgb(17,17,17)"
+              "color": "white"
              }
             },
             "header": {
              "fill": {
-              "color": "#2a3f5f"
+              "color": "#C8D4E3"
              },
              "line": {
-              "color": "rgb(17,17,17)"
+              "color": "white"
              }
             },
             "type": "table"
@@ -2893,7 +2898,7 @@
            {
             "marker": {
              "line": {
-              "color": "rgb(17,17,17)",
+              "color": "white",
               "width": 0.5
              },
              "pattern": {
@@ -2927,42 +2932,42 @@
            "#FECB52"
           ],
           "font": {
-           "color": "#f2f5fa"
+           "color": "#2a3f5f"
           },
           "hovermode": "closest",
           "hoverlabel": {
            "align": "left"
           },
-          "paper_bgcolor": "rgb(17,17,17)",
-          "plot_bgcolor": "rgb(17,17,17)",
+          "paper_bgcolor": "white",
+          "plot_bgcolor": "white",
           "polar": {
-           "bgcolor": "rgb(17,17,17)",
+           "bgcolor": "white",
            "angularaxis": {
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "gridcolor": "#EBF0F8",
+            "linecolor": "#EBF0F8",
             "ticks": ""
            },
            "radialaxis": {
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "gridcolor": "#EBF0F8",
+            "linecolor": "#EBF0F8",
             "ticks": ""
            }
           },
           "ternary": {
-           "bgcolor": "rgb(17,17,17)",
+           "bgcolor": "white",
            "aaxis": {
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#A2B1C6",
             "ticks": ""
            },
            "baxis": {
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#A2B1C6",
             "ticks": ""
            },
            "caxis": {
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#A2B1C6",
             "ticks": ""
            }
           },
@@ -3105,89 +3110,79 @@
            ]
           },
           "xaxis": {
-           "gridcolor": "#283442",
-           "linecolor": "#506784",
+           "gridcolor": "#EBF0F8",
+           "linecolor": "#EBF0F8",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "#283442",
+           "zerolinecolor": "#EBF0F8",
            "automargin": true,
            "zerolinewidth": 2
           },
           "yaxis": {
-           "gridcolor": "#283442",
-           "linecolor": "#506784",
+           "gridcolor": "#EBF0F8",
+           "linecolor": "#EBF0F8",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "#283442",
+           "zerolinecolor": "#EBF0F8",
            "automargin": true,
            "zerolinewidth": 2
           },
           "scene": {
            "xaxis": {
-            "backgroundcolor": "rgb(17,17,17)",
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "backgroundcolor": "white",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#EBF0F8",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "#C8D4E3",
+            "zerolinecolor": "#EBF0F8",
             "gridwidth": 2
            },
            "yaxis": {
-            "backgroundcolor": "rgb(17,17,17)",
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "backgroundcolor": "white",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#EBF0F8",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "#C8D4E3",
+            "zerolinecolor": "#EBF0F8",
             "gridwidth": 2
            },
            "zaxis": {
-            "backgroundcolor": "rgb(17,17,17)",
-            "gridcolor": "#506784",
-            "linecolor": "#506784",
+            "backgroundcolor": "white",
+            "gridcolor": "#DFE8F3",
+            "linecolor": "#EBF0F8",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "#C8D4E3",
+            "zerolinecolor": "#EBF0F8",
             "gridwidth": 2
            }
           },
           "shapedefaults": {
            "line": {
-            "color": "#f2f5fa"
+            "color": "#2a3f5f"
            }
           },
           "annotationdefaults": {
-           "arrowcolor": "#f2f5fa",
+           "arrowcolor": "#2a3f5f",
            "arrowhead": 0,
            "arrowwidth": 1
           },
           "geo": {
-           "bgcolor": "rgb(17,17,17)",
-           "landcolor": "rgb(17,17,17)",
-           "subunitcolor": "#506784",
+           "bgcolor": "white",
+           "landcolor": "white",
+           "subunitcolor": "#C8D4E3",
            "showland": true,
            "showlakes": true,
-           "lakecolor": "rgb(17,17,17)"
+           "lakecolor": "white"
           },
           "title": {
            "x": 0.05
           },
-          "updatemenudefaults": {
-           "bgcolor": "#506784",
-           "borderwidth": 0
-          },
-          "sliderdefaults": {
-           "bgcolor": "#C8D4E3",
-           "borderwidth": 1,
-           "bordercolor": "rgb(17,17,17)",
-           "tickwidth": 0
-          },
           "mapbox": {
-           "style": "dark"
+           "style": "light"
           }
          }
         },
@@ -3252,13 +3247,13 @@
      }
     }
    ],
-   "execution_count": 31
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T21:31:09.087039Z",
-     "start_time": "2025-11-09T21:31:09.085570Z"
+     "end_time": "2025-11-09T21:59:38.716029Z",
+     "start_time": "2025-11-09T21:59:38.714548Z"
     }
    },
    "cell_type": "code",
